# cybersecurity-news-feed

./: .gitignore  FIXED_SETUP.md  QUICKSTART.md  README.md  UV_GUIDE.md  app.py  cursor-mcp-config.json  pyproject.toml  test_mcp.py
backend/: elasticsearch_client.py  env.example  mcp_server.py  pyproject.toml  requirements.txt  server_with_rest.py  start_server.py  test_backend.py  test_rest_api.py
frontend/: api_client.py  app.py  env.example  mcp_client.py  pyproject.toml  requirements.txt
